# web-hw08-RabbitMQ

./: README.md  consumer.py  contact.json  models.py  producer.py  pyproject.toml
