[tool.poetry]
name = "web-hw08-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "web_hw08_rabbitmq"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.4"
redis-lru = "^0.1.2"
pika = "^1.3.1"
faker = "^18.4.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
